2013-12-16  Darin Adler  <darin@apple.com>

        Improve "bad parent" and "bad child list" assertions in line boxes
        https://bugs.webkit.org/show_bug.cgi?id=125656

        Reviewed by Sam Weinig.

        * rendering/InlineBox.cpp:
        (WebCore::InlineBox::root): Use parent() function with assertions rather than
        using m_parent function, which skips the assertions.
        * rendering/RenderText.cpp:
        (WebCore::RenderText::removeAndDestroyTextBoxes): Call invalidateParentChildLists
        if we are in the optimized document-destruction code path and destroying children
        without removing them from their parents.
        * rendering/RenderTextLineBoxes.cpp:
        (WebCore::RenderTextLineBoxes::invalidateParentChildLists): Added.
        * rendering/RenderTextLineBoxes.h: Added invalidateParentChildLists.

2013-12-19  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/15696824> [CFNetwork] Loading stops at server redirects
        https://bugs.webkit.org/show_bug.cgi?id=125984

        Reviewed by Anders Carlsson.

        * platform/network/cf/ResourceHandleCFNet.cpp:
        (WebCore::ResourceHandle::willSendRequest): If the client uses async callbacks, call its
        willSendRequestAsync callback instead if willSendRequest.

2013-12-19  Andreas Kling  <akling@apple.com>

        CascadedProperties: Deferred properties should have inline capacity.
        <https://webkit.org/b/125994>

        Give CascadedProperties::m_deferredProperties an inline capacity
        of 8 to sidestep malloc churn (0.2% of HTML5-8266 profile.)

        Reviewed by Antti Koivisto.

2013-12-19  Andreas Kling  <akling@apple.com>

        Two small refinements to matched properties cache.
        <https://webkit.org/b/125992>

        - Avoid computing the matched properties hash if we're banned from
          using the cache anyway.

        - When adding a new entry to the cache, use move semantics to avoid